[gd_scene load_steps=20 format=2]

[ext_resource path="res://upright_spider.gd" type="Script" id=1]
[ext_resource path="res://sprites/upright-spider/6.png" type="Texture" id=2]
[ext_resource path="res://sprites/upright-spider/7.png" type="Texture" id=3]
[ext_resource path="res://sprites/upright-spider/8.png" type="Texture" id=4]
[ext_resource path="res://sprites/upright-spider/9.png" type="Texture" id=5]
[ext_resource path="res://sprites/upright-spider/10.png" type="Texture" id=6]
[ext_resource path="res://sprites/upright-spider/1.png" type="Texture" id=7]
[ext_resource path="res://sprites/upright-spider/2.png" type="Texture" id=8]
[ext_resource path="res://sprites/upright-spider/3.png" type="Texture" id=9]
[ext_resource path="res://sprites/upright-spider/4.png" type="Texture" id=10]
[ext_resource path="res://sprites/upright-spider/11.png" type="Texture" id=11]
[ext_resource path="res://sprites/upright-spider/12.png" type="Texture" id=12]
[ext_resource path="res://sprites/upright-spider/13.png" type="Texture" id=13]
[ext_resource path="res://sprites/upright-spider/14.png" type="Texture" id=14]
[ext_resource path="res://sprites/upright-spider/15.png" type="Texture" id=15]
[ext_resource path="res://walking-dust.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/shadow.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "attacking",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "dying",
"speed": 3.5
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 15 )

[node name="spider" type="KinematicBody2D"]
position = Vector2( 112, 54 )
scale = Vector2( 0.559983, 0.559983 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dying"
frame = 4
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 28.5723, -8.92884 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 3.0

[node name="walkupdust1" parent="." instance=ExtResource( 16 )]
position = Vector2( -3.57154, -14.2861 )
scale = Vector2( 0.7, 0.7 )
z_index = -3

[node name="walkupdust2" parent="." instance=ExtResource( 16 )]
position = Vector2( -3.57154, 10.7146 )
scale = Vector2( 0.7, 0.7 )
z_index = -4

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 17 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
